--- a/Talks:Posters/abdnn.bib
+++ b/Talks:Posters/abdnn.bib
@@ -105,3 +105,9 @@ url = {http://dx.doi.org/10.1038/nn1790 http://www.nature.com/neuro/journal/v9/n
 volume = {9},
 year = {2006}
 }
+@Book{rice06statistics,
+author = {John A. Rice},
+title = {Mathematical Statistics and Data Analysis},
+publisher = {Duxbury Press},
+year = 2006,
+}
